fixed flash box placement; logo no longer overlaps

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -184,8 +184,8 @@ form.noise {
 
 div.error, div.notice, div.success,
 #flash_failure, #flash_success, #flash_notice {
+  margin: 12px 0 10px 190px;
   padding: 0.8em;
-  margin-bottom: 1em;
   border: 1px solid #ddd;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
